--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -302,6 +302,11 @@ resources:
       private_key: ((github-private-key))
       git_user:    "((git-commit-name)) <((git-commit-email))>"
 
+  - name: image
+    source:
+      tag:               (( prune ))
+      semver_constraint: "< 1970" # Avoid YYYYMMDD tags like '20231219'
+
   - name: golang-latest
     type: registry-image
     icon: docker
