Refresh base pipeline from latest template [skip ci]

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -8,9 +8,10 @@
 # ci/settings.yml and override what needs overridden.
 # This uses spruce, so you have some options there.
 #
-# author:  James Hunt <james@niftylogic.com>
-#          Dennis Bell <dennis.j.bell@gmail.com>
-# created: 2016-03-04
+# original authors: James Hunt <james@niftylogic.com>
+#                   Dennis Bell <dennis.j.bell@gmail.com>
+# created:          2016-03-04
+# maintainer:       Benjamin Gandon (Gstack)
 
 meta:
   name:     (( param "Please name your pipeline" ))
@@ -104,6 +105,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -173,6 +175,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -217,6 +220,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -232,6 +236,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -247,6 +252,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -324,6 +330,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
