--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -252,6 +252,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
@@ -260,6 +261,7 @@ jobs:
       put: notify
       no_get: true
       params:
+        silent:   true
         channel:  (( grab meta.slack.channel ))
         username: (( grab meta.slack.username ))
         icon_url: (( grab meta.slack.icon ))
